external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/chain_upper_case_incomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/ide_mode/chain_upper_case_incomplete.move:5:9
  │
5 │         B
  │         ^ Expected a type, function, or constant in this position, not an address
