external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/chain_upper_case_incomplete.move
module 0x42::m1 {
    public fun bar() {}

    public fun foo() {
        B
    }
}
